--- a/style.css
+++ b/style.css
@@ -13,10 +13,11 @@ button {
 }
 body {
   text-align: center;
+  background-color: #262626;
 }
 .list {
   width: 400px;
-  margin: auto;
+  margin: 5rem auto;
   /* background-color: #f2f2f2; */
   background-image: url('https://i.pinimg.com/564x/3b/d2/1e/3bd21e0cef135afb8ec262164db008e2.jpg');
   position: relative;
@@ -98,12 +99,16 @@ body {
   outline: none;
   font-size: 24px;
   padding: 0 16px;
+  background-color: #b3b1b1;
+  border-radius: 10px 0 0 10px;
 }
 .footer__button {
   font-size: 18px;
   transition: all 300ms;
   color: #262626;
-  background-color: #fff;
+  background-color: #b3b1b1;
+  border-radius: 0 10px 10px 0;
+  padding-right: 1.2rem;
 }
 .footer__button:hover {
   font-size: 19px;
